test: correction des tests de services en échec
Mocks manquants ajoutés (TaillePrixRepository, PasswordEncoder), ordre des
stubs SyncService corrigé et stubbing inutile retiré. La suite repasse au vert.